# sql-docs

./: .gitignore  Cargo.toml  README.md  cobertura.xml  rustfmt.toml
.github/workflows/: cargo-clippy-template.yml  rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: sql_docs.rs
sql_files/: without_comments.sql
src/: ast.rs  comments.rs  dialect.rs  docs.rs  error.rs  files.rs  lib.rs  main.rs  source.rs  sql_doc.rs
