[package]
name = "sql_docs-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3.23.0"

[dependencies.sql_docs]
path = ".."
features = ["fuzzing"]

[[bin]]
name = "sql_docs"
path = "fuzz_targets/sql_docs.rs"
test = false
doc = false
bench = false
